# rustql

./: .gitignore  .replit  Cargo.toml  README.md  clippy.toml  config.toml  rustfmt.toml
attached_assets/: Pasted--Complete-RustQL-Project-Structure-rustql-Cargo-toml-Dependencies-proj-1749810016624_1749810016626.txt
benches/: graphql_benchmark.rs
scripts/: benchmark.sh  dev.sh  test.sh
src/: lib.rs  main.rs
src/cache/: mod.rs  redis_cache.rs
src/config/: env.rs  mod.rs  settings.rs
src/error/: handlers.rs  mod.rs  recovery.rs  types.rs
src/graphql/: mod.rs  playground.rs  resolvers.rs  schema.rs
src/metrics/: mod.rs  prometheus.rs
src/query/: mod.rs
src/rate_limit/: governor.rs  mod.rs
src/rest/: adapter.rs  client.rs  mod.rs
src/security/: mod.rs
src/server/: handlers.rs  middleware.rs  mod.rs  routes.rs
src/utils/: errors.rs  mod.rs
tests/fixtures/: mod.rs
tests/integration/: basic_tests.rs
