
[package]
name = "rustql"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "High-performance GraphQL-to-REST API Gateway"
license = "MIT"
repository = "https://github.com/yourusername/rustql"
keywords = ["graphql", "rest", "api", "gateway", "performance"]
categories = ["web-programming", "api-bindings"]

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["full"] }
hyper = "1.0"

# GraphQL
async-graphql = { version = "7.0", features = ["tracing"] }
async-graphql-axum = "7.0"

# HTTP client
reqwest = { version = "0.11", features = ["json", "stream"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Configuration
config = "0.14"
clap = { version = "4.0", features = ["derive"] }

# Caching
redis = { version = "0.24", features = ["tokio-comp"] }
moka = { version = "0.12", features = ["future"] }

# Rate limiting
governor = "0.6"

# Metrics & observability
prometheus = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
opentelemetry = "0.21"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Security
jsonwebtoken = "9.0"
bcrypt = "0.15"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
once_cell = "1.19"
dashmap = "5.5"

[dev-dependencies]
criterion = "0.5"
mockito = "1.2"
tokio-test = "0.4"

[[bench]]
name = "query_bench"
harness = false

[[bench]]
name = "cache_bench"
harness = false
