[package]
name = "rustql"
version = "0.1.0"
edition = "2024"
authors = ["Vivek <j.vivekvamsi@gmail.com>"]
description = "High-Performance GraphQL-to-REST API Gateway"
license = "MIT"
repository = "https://github.com/vivekjami/rustql"


[dependencies]
# Web server and async runtime
tokio = { version = "1.35", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# GraphQL engine
async-graphql = "7.0.17"
async-graphql-warp = "7.0.17"

# HTTP client for REST APIs
reqwest = { version = "0.12.20", features = ["json", "stream"] }

# Configuration management
config = "0.15.11"
toml = "0.8"

# Error handling
thiserror = "2.0.12"
anyhow = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Caching and performance
redis = { version = "0.32.1", features = ["aio", "tokio-comp"] }
dashmap = "6.1.0"

# Rate limiting
governor = "0.10.0"

# Metrics and monitoring
prometheus = "0.14.0"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"

[dev-dependencies]
criterion = { version = "0.6.0", features = ["html_reports"] }
tokio-test = "0.4"

[[bench]]
name = "graphql_benchmark"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
